@@ -1,3 +1,6 @@
+29-May-2015 Laurent Duflot
+	* getMCInfo.py, FilterUpdateMerge.py: add mc15_13TeV
+
 28-May-2015 Laurent Duflot
 	* FilterUpdateMerge: merge also the CRWT, CRZ and CRY blocks
 
